--- a/app/src/main/res/layout/menu_productos_fragmnet.xml
+++ b/app/src/main/res/layout/menu_productos_fragmnet.xml
@@ -2,14 +2,35 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:backgroundTint="@color/white"
     android:layout_margin="10dp">
 
-    <ListView
-        android:id="@+id/lis_menu_productos"
+    <include
+        android:id="@+id/fragment_no_data"
+        layout="@layout/fragment_no_data"
+        android:visibility="gone"/>
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lottieAnimationView"
         android:layout_width="match_parent"
-        android:backgroundTint="@color/white"
         android:layout_height="match_parent"
-        android:numColumns="2"/>
+        app:lottie_autoPlay="true"
+        android:background="@color/white"
+        app:lottie_loop="true"
+        android:visibility="gone" />
+
+    <LinearLayout
+        android:id="@+id/cont_add_producto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <ListView
+            android:id="@+id/lis_menu_productos"
+            android:layout_width="match_parent"
+            android:backgroundTint="@color/white"
+            android:layout_height="match_parent"
+            android:numColumns="2"/>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
