--- a/app/src/main/res/layout/add_producto_fragment.xml
+++ b/app/src/main/res/layout/add_producto_fragment.xml
@@ -11,19 +11,28 @@
         android:padding="16dp"
         android:background="@color/white">
 
+
         <include
             android:id="@+id/fragment_no_data"
             layout="@layout/fragment_no_data"
-            android:visibility="gone"/>
+            android:visibility="gone"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/lottieAnimationView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             app:lottie_autoPlay="true"
             android:background="@color/white"
             app:lottie_loop="true"
-            android:visibility="gone" />
+            android:visibility="gone"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <LinearLayout
             android:id="@+id/cont_add_producto"
