--- a/app/src/main/res/layout/add_cliente_fragment.xml
+++ b/app/src/main/res/layout/add_cliente_fragment.xml
@@ -167,6 +167,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:backgroundTint="@color/white"
+                                android:maxLength="10"
                                 android:inputType="phone" />
                         </com.google.android.material.textfield.TextInputLayout>
 
@@ -216,7 +217,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:backgroundTint="@color/white"
-                                android:inputType="phone" />
+                                android:inputType="text" />
                         </com.google.android.material.textfield.TextInputLayout>
                         <com.google.android.material.textfield.TextInputLayout
                             android:layout_width="match_parent"
@@ -231,7 +232,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:backgroundTint="@color/white"
-                                android:inputType="phone" />
+                                android:inputType="text" />
                         </com.google.android.material.textfield.TextInputLayout>
 
 
