--- a/app/src/main/res/layout/cliente_fragment.xml
+++ b/app/src/main/res/layout/cliente_fragment.xml
@@ -96,13 +96,12 @@
 
         </LinearLayout>
 
-        <GridView
-            android:id="@+id/lis_menu_productos"
+        <ListView
+            android:id="@+id/lis_menu_clientes"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:backgroundTint="@color/white"
             android:layout_weight="1"
-            android:numColumns="2"
             app:layout_constraintTop_toBottomOf="@id/barraBusqueda"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
