--- a/app/src/main/res/layout/cliente_fragment.xml
+++ b/app/src/main/res/layout/cliente_fragment.xml
@@ -31,81 +31,34 @@
     <LinearLayout
         android:id="@+id/cont_add_producto"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
 
-        <LinearLayout
-            android:id="@+id/barraBusqueda"
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/textViewNombreCompleto"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_margin="10dp"
-            android:orientation="horizontal">
-
-            <!-- EditText con estilo de búsqueda -->
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/search_text_input_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/white"
-                android:layout_margin="5dp"
-                android:layout_weight="0.8">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/search_edit_text"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:backgroundTint="@color/white"
-                    android:hint="Buscar"/>
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <!-- Spinner con estilo de Material -->
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-                android:id="@+id/textCategoria"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/white"
-                android:layout_margin="5dp"
-                android:layout_weight="0.8">
-
-                <AutoCompleteTextView
-                    android:id="@+id/spCategoria"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:backgroundTint="@color/white"
-                    android:text="@string/txtField_categoria"/>
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <!-- Botón para buscar -->
-            <ImageView
-                android:id="@+id/btnBuscar"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="5dp"
-                android:layout_weight="1.3"
-                android:src="@drawable/ic_search"
-                android:background="@null"
-                android:contentDescription="Buscar"/>
-
-        </LinearLayout>
+            android:layout_height="match_parent"
+            android:text="Clientes"
+            android:gravity="right|center"
+            android:layout_marginRight="20dp"
+            app:autoSizeTextType="uniform"
+            app:autoSizeMinTextSize="25sp"
+            app:autoSizeMaxTextSize="30sp"
+            android:layout_weight="1"
+            android:textStyle="bold" />
+        <SearchView
+            android:id="@+id/buscarCliente"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
 
         <ListView
             android:id="@+id/lis_menu_clientes"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="match_parent"
             android:backgroundTint="@color/white"
-            android:layout_weight="1"
-            app:layout_constraintTop_toBottomOf="@id/barraBusqueda"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            android:layout_weight="0.2"/>
 
 
     </LinearLayout>
