--- a/app/src/main/res/layout/cliente_list_fragment.xml
+++ b/app/src/main/res/layout/cliente_list_fragment.xml
@@ -6,7 +6,6 @@
     android:padding="20dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="160dp"
@@ -50,7 +49,9 @@
                     android:gravity="center"
                     android:maxLines="1"
                     android:layout_marginBottom="10dp"
-                    android:textSize="18dp"
+                    app:autoSizeTextType="uniform"
+                    app:autoSizeMinTextSize="14sp"
+                    app:autoSizeMaxTextSize="20sp"
                     android:textStyle="bold" />
 
                 <LinearLayout
@@ -96,7 +97,6 @@
                             android:layout_weight="1"
                             android:text="Luis Alfonso Niño Mtz"
                             android:gravity="center"
-                            android:textSize="15dp"
                             android:maxLines="1"
                             app:autoSizeTextType="uniform"
                             app:autoSizeMinTextSize="12sp"
@@ -108,7 +108,6 @@
                             android:layout_weight="1"
                             android:text="Luis Alfonso Niño Mtz"
                             android:gravity="center"
-                            android:textSize="15dp"
                             android:maxLines="1"
                             app:autoSizeTextType="uniform"
                             app:autoSizeMinTextSize="12sp"
@@ -120,7 +119,6 @@
                             android:layout_weight="1"
                             android:text="Luis Alfonso Niño Mtz"
                             android:gravity="center"
-                            android:textSize="15dp"
                             android:maxLines="1"
                             app:autoSizeTextType="uniform"
                             app:autoSizeMinTextSize="12sp"
