--- a/app/src/main/res/layout/cliente_list_fragment.xml
+++ b/app/src/main/res/layout/cliente_list_fragment.xml
@@ -41,6 +41,24 @@
                 android:layout_weight="0.5"
                 android:orientation="vertical">
 
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/btnEditar"
+                    android:layout_gravity="right"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    app:cardCornerRadius="50dp"
+                    android:layout_marginTop="-25dp"
+                    android:layout_marginRight="15dp"
+                    android:backgroundTint="@color/katzen_verde">
+
+                    <ImageView
+
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="4dp"
+                        android:src="@drawable/ic_edit_blanco" />
+                </androidx.cardview.widget.CardView>
+
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/textViewNombreCompleto"
                     android:layout_width="match_parent"
@@ -65,18 +83,21 @@
                         android:layout_weight="1"
                         android:orientation="horizontal">
                         <ImageView
+                            android:id="@+id/fondoTelefono"
                             android:src="@drawable/ic_telefono"
                             android:layout_weight="1"
                             android:layout_margin="3dp"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent" />
                         <ImageView
+                            android:id="@+id/fondoCorreo"
                             android:src="@drawable/ic_correo"
                             android:layout_weight="1"
                             android:layout_margin="3dp"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent" />
                         <ImageView
+                            android:id="@+id/fondoUbicacion"
                             android:src="@drawable/ic_location"
                             android:layout_weight="1"
                             android:layout_margin="3dp"
